--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.0.0",
     "ajv-keywords": "^5.0.0",
+    "i18next": "^24.2.2",
+    "i18next-browser-languagedetector": "^8.0.4",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
