--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.0.0",
     "ajv-keywords": "^5.0.0",
+    "axios": "^1.8.3",
+    "firebase": "^11.4.0",
     "i18next": "^24.2.2",
     "i18next-browser-languagedetector": "^8.0.4",
     "i18next-http-backend": "^3.0.2",
